# s1s2_water

./: .dockerignore  .gitignore  README.md  entrypoint.Dockerfile  entrypoint.py  environment.yaml  explore_dataset.ipynb  pyproject.toml  s1s2_water.py  settings.toml
data/: catalog.json
prepare/: __init__.py  augment.py  download.py  preproc_s1_snap.xml  split.py  utils.py
