[tool.poetry]
name = "s1s2_water"
version = "0.1.0"
description = "s1s2_water reference dataset"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
numpy = "^1.23.3"
albumentations = "^1.2.1"
tqdm = "^4.64.1"
tifffile = "^2022.8.12"
imagecodecs = "^2022.8.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
